apps/base/kasm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasm
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    goldilocks.fairwinds.com/enabled: "true"
