apps/base/kasm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm
  namespace: kasm
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: main
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app.kubernetes.io/instance: kasm
    app.kubernetes.io/name: kasm
  sessionAffinity: None
  type: ClusterIP
